# sqlight

./: .gitignore  CMakeLists.txt  cov.sh  main.cpp  sqlight.hpp  sqlitght.cpp
include/: sqlight.hpp
src/: sqlitght.cpp
tests/: CMakeLists.txt  main.cpp
